--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,13 @@ h2 {
 h3 {
     margin: 0;
 }
+p {
+    margin: 0;
+}
 body {
     font-family: 'Roboto', sans-serif;
     margin: auto;
+    background-color: #efefef;
 }
 main {
     margin: 10px 10px;
@@ -34,12 +38,18 @@ main {
     margin: 2px 0;
     height: 60px;
 }
+.bottom {
+    margin-bottom: 0px;
+}
 .icon {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
+.img-svg {
+    font-size: 2.5rem;
+    color: #ffffff;
+}
 .accordion div:nth-child(1) {
     flex: 0 0 60px;
     min-height: 1.6em;
@@ -59,14 +69,72 @@ main {
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
-@media (max-width:767px) {
-    h2, h3 {
-        font-size: 15px;
+.row {
+    padding: 0 0 0 42px;
+}
+/* LI DOTS */
+ul {
+    list-style-type: none;
+    width: 100%;
+    margin: 5px 0;
+    padding: 0;
+}  
+.list {
+    display: flex;
+    margin: 10px 0 0 0;
+  }
+  
+.food_name {
+    font-weight: bold;
+    margin-right: 0.5em;
+    flex: 1;
+    display: flex;
+}
+.heft {
+    margin: 0 10px;
+    font-weight: bold;
+}  
+.price {
+    font-weight: bold;
+    text-align: right;
+    flex: 0 0 0em;
+}
+  
+.food_name:after {
+    content: '';
+    border-bottom: dashed 1px black;
+    flex:1; 
+    margin: 4px; 
+}
+
+@media (max-width:980px) {
+    h2 {
+        font-size: 16px;
+    }
+    h3 {
+        font-size: 14px;
+    }
+    main {
+        margin: 0px 0px;
+        box-shadow: 0 15px 10px 0 rgba(0,0,0,0.2);
     }
     .title {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: flex-start;
+    }
+    .img-svg {
+        font-size: 2rem;
+        color: #ffffff;
+    }
+    .food_name {
+        font-size: 16px;
+    }
+    .price {
+        font-size: 15px;
+    }
+    .desc {
+        font-size: 13px;
     }
 }
