--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,9 @@ main {
     margin: auto;
     box-shadow: 0 15px 10px 0 rgba(0,0,0,0.2);
 }
+footer {
+    margin; 10px auto;    
+}
 .accordion {
     display: flex;
     background-color: #8ca28e;
