--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,9 @@ main {
     box-shadow: 0 15px 10px 0 rgba(0,0,0,0.2);
 }
 footer {
-    margin: 10px auto;    
+    margin: 30px auto;
+    display: flex;
+    justify-content: center;    
 }
 .accordion {
     display: flex;
