--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *,*::before,*::after {
     box-sizing: border-box;
@@ -35,12 +37,13 @@ p {
 body {
     font-family: 'Roboto', sans-serif;
     margin: auto;
-    background-color: #efefef;
+    background-color: #e6e6e6;
 }
 main {
     max-width: 980px;
     margin: auto;
     box-shadow: 0 15px 10px 0 rgba(0,0,0,0.2);
+    position: relative;
 }
 footer {
     margin: 30px auto;
@@ -102,7 +105,7 @@ footer {
 
 .panel {
     padding: 0 18px;
-    background-color: white;
+    background-color: #e6e6e6;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
@@ -163,7 +166,6 @@ ul {
     background: #c24b4b;
 }
 /* LI DOTS END */
-
 .ingredients {
     font-size: 14px !important;
     font-style: italic;
@@ -175,7 +177,6 @@ ul {
     flex:1; 
     margin: 4px; 
 }
-
 /* TEST Style */
 .description {
     display: flex;
@@ -187,26 +188,24 @@ ul {
 }
 .description p:nth-child(1) {
     font-size: 14px;
+    font-family: 'Rubik', sans-serif;
 }
 .description p:nth-child(2) {
     font-size: 14px;
     font-style: italic;
+    font-family: 'Rubik', sans-serif;
 }
 /* END TEST Style */
 
-@media (min-width: 992px) and (max-width: 1199px) {
-    h2 {
-        font-size: 16px;
-    }
-    h3 {
-        font-size: 14px;
-    }
-    .sublist_en {
-        font-size: 14px !important;
-    } 
+.accordion:after {
+    content: '\002B';
+    color: #000;
+    font-size: 23px;
+    position: absolute;
+    line-height: 60px;
+    right: 15px;
 }
-@media (max-width:896px) {
-    .sublist_en {
-        font-size: 14px !important;
-    } 
+
+.active:after {
+    content: "\2212";
 }
